Fixup hunter seeker ai